# climarraykit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
climarraykit/: __init__.py  conversions.py  data_manipulation.py  patterns.py  xarray_obj_handler.py
recipe/: meta.yaml  post-link.sh
