[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climarraykit"
version = "0.1.0"
license = {file = "LICENSE"}
description = "Climate-focused xarray toolkit for NetCDF/GRIB handling, coordinate discovery, and dataset serialisation"
keywords = ["xarray", "climate", "netcdf", "grib", "meteorology", "climatology"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "Jon Ander Gabantxo", email = "jagabantxo@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "xarray>=2024.2.0",
    "filewise>=3.13.0",
    "pygenutils>=16.4.0",
    "paramlib>=3.4.10",
]

[project.optional-dependencies]
grib = [
    "cfgrib>=0.9.10",
]
regrid = [
    "xesmf>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/EusDancerDev/climarraykit"
Documentation = "https://github.com/EusDancerDev/climarraykit#readme"
Repository = "https://github.com/EusDancerDev/climarraykit.git"
"Bug Reports" = "https://github.com/EusDancerDev/climarraykit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["climarraykit*"]
exclude = ["tests*", "tests.*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
climarraykit = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]
